--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 Атрибут `alt` важен для SEO.
             -->
             <img class="w-full h-full object-cover transition-transform duration-300 card-image" 
-                 src="img/Untitled1.png" 
+                 src="img/Untitled.png" 
                  alt="Изображение товара (1024x1024)">
             
             <!-- Лейбл "Новинка" -->
