--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
             <h2>Ready to Create Your AI Avatar?</h2>
             <p>Get your first video for only **€15** (limited time offer).</p>
             <div class="contact-links">
-                <a href="https://wa.me/+420723 673 158">Message on WhatsApp</a>
+                <a href="https://wa.me/+420723673158">Message on WhatsApp</a>
             </div>
         </section>
     </div>
